--- a/_posts/0000-01-02-jme-mx.md
+++ b/_posts/0000-01-02-jme-mx.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Hello there, Master Kenobi!
+What if I told you I have no idea what I'm doing........
 Use the left arrow to go back!
